// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <a
    aria-current={false}
    className="StartovniCislaProTyp__item Legenda-item-dokonceno"
    href="/prihlasky/10"
    onClick={[Function]}
    style={undefined}
  >
    7
  </a>
</div>
`;

exports[`renders StartovniCisla - odstartováni 1`] = `
<div
  className="StartovniCisla__div"
>
  <div
    className="StartovniCisla__buttons"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <div
    className="StartovniCisla__legenda"
  >
    <Legenda
      legenda={
        Array [
          Object {
            "name": "dokonceno",
            "popisek": "dokončeno",
          },
          Object {
            "name": "nedokonceno",
            "popisek": "nedokončeno",
          },
          Object {
            "name": "na-trase",
            "popisek": "na trase",
          },
          Object {
            "name": "neaktivni",
            "popisek": "neaktivní",
          },
        ]
      }
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="maraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="maraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="maraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="půlmaraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="půlmaraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="půlmaraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="cyklo"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="cyklo"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="cyklo"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="koloběžka"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="koloběžka"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="koloběžka"
    />
  </div>
</div>
`;

exports[`renders StartovniCisla - přihlášeni 1`] = `
<div
  className="StartovniCisla__div"
>
  <div
    className="StartovniCisla__buttons"
  >
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <div
    className="StartovniCisla__legenda"
  >
    <Legenda
      legenda={
        Array [
          Object {
            "name": "dokonceno",
            "popisek": "dokončeno",
          },
          Object {
            "name": "nedokonceno",
            "popisek": "nedokončeno",
          },
          Object {
            "name": "na-trase",
            "popisek": "na trase",
          },
        ]
      }
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="maraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="maraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="maraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="půlmaraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="půlmaraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="půlmaraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="cyklo"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="cyklo"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="cyklo"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="koloběžka"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        typ="koloběžka"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="koloběžka"
    />
  </div>
</div>
`;
